--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 contourpy==1.0.6
 cycler==0.11.0
 fonttools==4.38.0
+idna==3.4
 joblib==1.2.0
 kiwisolver==1.4.4
 matplotlib==3.6.2
@@ -13,10 +16,15 @@ Pillow==9.3.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.6
+PyYAML==6.0
 regex==2022.10.31
+requests==2.28.1
 scikit-learn==1.1.3
 scipy==1.9.3
 seaborn==0.12.1
+searchtweets==1.7.6
 six==1.16.0
 threadpoolctl==3.1.0
 tqdm==4.64.1
+tweet-parser==1.13.2
+urllib3==1.26.13
