--- a/config.yaml
+++ b/config.yaml
@@ -1,19 +1,21 @@
 dataset:
   path: "dataset/sequences.json"
-  max_seq: 2000
+  max_seq: 50
   max_transactions: 20
   max_items: 100
 
 gsp:
-  min_supp_norm: 0.4
+  min_supp_norm: 0.3
   log_level: 1
 
 prefixspan:
-    min_supp_norm: 0.12
-    maxlength: 7
+    min_supp_norm: 0.4
+    maxlength: 2
 
 #type: 'gsp'
 type: 'prefixspan'
 
 output:
-  out_directory: "output/prefixspan_test"
+  # True or False
+  with_profile: True
+  out_directory: "output/gsp_memory_500_03"
